--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -5,6 +5,7 @@ $c1: rgb(255, 138, 29);
 // $c2: rgb(209, 227, 255);
 $c2: rgb(173, 205, 255);
 $c2_1: rgb(32, 78, 151);
+$c2_dark: rgb(10, 15, 67);
 $c3:rgb(196, 196, 196);
 $c4:rgb(0, 0, 0);
 $c4_02:rgba(0, 0, 0, 0.2);
