--- a/sass/_section.scss
+++ b/sass/_section.scss
@@ -28,6 +28,7 @@ article {
 
         i {
             font-size: 4rem;
+            margin-bottom: 2rem;
         }
 
         h5 {
@@ -52,6 +53,11 @@ article {
 .about_section {
     width: 100%;
     height: 100%;
+
+}
+
+.padding-top {
+    padding-top: calc($navHeight *3);
 }
 
 .container {
@@ -142,8 +148,12 @@ p {
             @include flexColumnCenter();
             transition: .2s linear;
 
-            i {
-                font-size: 4rem;
+            // i {
+            //     font-size: 4rem;
+            // }
+            img {
+
+                transition: .2s linear;
             }
 
             h1 {
@@ -157,6 +167,10 @@ p {
         .card:hover {
             background-color: $c1;
             color: white;
+
+            img {
+                filter: drop-shadow(.3rem .2rem .1rem white);
+            }
         }
     }
 }
