--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -4,6 +4,10 @@ footer {
     background-color: $c2_dark;
     color: white;
 
+    a {
+        color: white;
+    }
+
     .info_section {
         width: 100%;
         height: 100%;
@@ -77,12 +81,20 @@ footer {
     .copyrights_container {
         width: 100%;
         height: auto;
-        padding: 1rem 0;
+        padding: 1rem;
         border-top: .1rem solid rgba(255, 255, 255, 0.3);
 
         p {
             font-size: .7rem;
             text-align: center;
+
+            .footer_span_p {
+                color: rgba(255, 255, 255, 0.5);
+
+                a {
+                    color: rgba(255, 255, 255, 0.5);
+                }
+            }
         }
     }
 }
