--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -4,10 +4,14 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
 
 
 body {
     font-family: 'Lato', sans-serif;
     color: $c4;
     font-size: 10px;
+
 }
