--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -103,12 +103,14 @@ nav {
                     }
 
                     .line:nth-child(1) {
+                        top: 50%;
                         transform: rotate(45deg);
                         // transform: rotate(45deg);
 
                     }
 
                     .line:nth-child(2) {
+                        top: 50%;
                         transform: rotate(-45deg);
                     }
                 }
@@ -128,4 +130,96 @@ nav {
         background-color: transparent;
     }
 
+
+
+}
+
+.menu_list {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 100%;
+    height: 100vh;
+    z-index: 99;
+    transition: .4s linear;
+
+    .container_menu_list {
+        width: 100%;
+        height: 100%;
+        // background-color: $c2_1;
+        background-image: linear-gradient(-135deg, $c2_1, $c2);
+        // border-top-left-radius: 30%;
+        // border-bottom-left-radius: 30%;
+        @include flexColumnCenter();
+
+        .list {
+            // background-color: aqua;
+            width: auto;
+            height: auto;
+            @include flexColumnCenter();
+
+            li {
+                list-style: none;
+                margin-top: 2rem;
+
+                a {
+                    position: relative;
+                    padding: .5rem 3rem;
+                    color: white;
+                    text-shadow: 0 0 .1rem white;
+                    font-size: 2rem;
+                    text-decoration: none;
+                    font-weight: 900;
+                    text-transform: uppercase;
+                    transition: .3s linear;
+                    transform: translateY(-1rem);
+                    z-index: 0;
+                }
+
+                a::after {
+                    content: "";
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    width: 0;
+                    height: .1rem;
+                    border-radius: .5rem;
+                    background-color: transparent;
+                    z-index: -1;
+                    transition: .3s linear;
+                }
+            }
+
+            li:hover {
+                // a {
+                //     color: $c1;
+                // }
+
+                a::after {
+
+                    width: 100%;
+                    background-color: $c1;
+
+
+                }
+
+            }
+        }
+    }
+}
+
+.menu_list_active {
+    right: 0 !important;
+}
+
+@media (min-width:1024px) {
+    .menu_list {
+
+
+        width: 30%;
+        right: -30%;
+
+
+
+    }
 }
